# nToken

./: CMakeLists.txt  main.cu  readme.md
JAVA/nToken/: build.xml
JAVA/nToken/src/: nToken_nToken.h
JAVA/nToken/src/nToken/: nToken.java
include/: basicDataTypeDefine.cuh  documentParser.cuh  fileReader.cuh  gpuStack.cuh  hyperCompressBoolArray.cuh  linkWithJava.cpp  linkWithJava.h  nToken.cuh  operatorParser.cuh
src/: documentParser.cu  fileReader.cu  gpuStack.cu  hyperCompressBoolArray.cu  linkWithJava.cpp  nToken.cu  nTokenDfsTraversalSearch.cu  nTokenGetPosition.cu  operatorParser.cu
test/: CMakeLists.txt  helloTest.cpp
